add mobile navbar

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,7 @@
   <section class="section">
     <div class="container has-text-centered">
       <h1 class="is-size-2 has-text-white">
-        Create a list of your favorite movies
-
+        Сreate a list of favorite movies
       </h1>
       <p class="subtitle has-text-white-ter">
         and share with others
